Fix frontend after backend changes
